<resources>
    <string name="app_name">VoiceTranslater</string>
    <string name="title_activity_setting">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_dummy">Dummy</string>

    <string name="ok">OK</string>

    <!--  権限要求  -->
    <string name="permission_record_audio">録音権限</string>
    <string name="permission_record_audio_message">このアプリは音声認識を使用するので、使用するにはマイクへのアクセス権限が必要です。</string>

    <!--  ボタン  -->
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_batch">Batch</string>
    <string name="button_realtime">Realtime</string>

    <!--  デフォルトテキスト  -->
    <string name="default_rec_text">認識された文字</string>
    <string name="default_trans_text">翻訳された文字</string>

    <!--  Settings  -->
    <string name="settings_title">設定</string>
    <string name="settings_rec_language">認識言語</string>
    <string name="settings_trans_language">翻訳言語</string>
    <string name="settings_hint_rec_language">音声認識の言語を選択</string>
    <string name="settings_hint_trans_language">翻訳する言語を選択</string>
    <string name="settings_search_hint">検索...</string>
    <string name="settings_offline">オフラインモード</string>
    <string name="settings_selected">選択してください</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">翻訳モード選択</string>
    <string name="second_fragment_label">リアルタイム翻訳</string>
    <string name="recognize_fragment_label">逐次翻訳</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">翻訳に使用するモードを選択してください。\n\nBatch は逐次翻訳、Realtime はリアルタイム翻訳です。\n右上のメニューバーから設定を変更できます。</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>